packages/er-gen-core/src/x007007007/er/parser/antlr/generated/MermaidERParser.py
# Generated from /Users/xxc/workspace/er-generate-model-main/src/x007007007/er/parser/antlr/MermaidER.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MermaidERParser ( Parser ):

    grammarFileName = "MermaidER.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "':'", "'-'", "'erDiagram'", 
                     "'PK'", "'FK'", "'UK'", "'||--||'", "<INVALID>", "<INVALID>", 
                     "'}o--||'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ER_DIAGRAM", "PK", "FK", "UK", "ONE_TO_ONE", 
                      "ONE_TO_MANY", "MANY_TO_MANY", "MANY_TO_ONE", "IDENTIFIER", 
                      "STRING", "WS", "NEWLINE", "COMMENT" ]

    RULE_diagram = 0
    RULE_invalidLine = 1
    RULE_entityDef = 2
    RULE_entityName = 3
    RULE_columnDef = 4
    RULE_columnType = 5
    RULE_columnName = 6
    RULE_columnModifiers = 7
    RULE_columnComment = 8
    RULE_relationship = 9
    RULE_relationSymbol = 10
    RULE_relationshipLabel = 11
    RULE_relationshipLabelText = 12

    ruleNames =  [ "diagram", "invalidLine", "entityDef", "entityName", 
                   "columnDef", "columnType", "columnName", "columnModifiers", 
                   "columnComment", "relationship", "relationSymbol", "relationshipLabel", 
                   "relationshipLabelText" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    ER_DIAGRAM=5
    PK=6
    FK=7
    UK=8
    ONE_TO_ONE=9
    ONE_TO_MANY=10
    MANY_TO_MANY=11
    MANY_TO_ONE=12
    IDENTIFIER=13
    STRING=14
    WS=15
    NEWLINE=16
    COMMENT=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DiagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ER_DIAGRAM(self):
            return self.getToken(MermaidERParser.ER_DIAGRAM, 0)

        def EOF(self):
            return self.getToken(MermaidERParser.EOF, 0)

        def entityDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MermaidERParser.EntityDefContext)
            else:
                return self.getTypedRuleContext(MermaidERParser.EntityDefContext,i)


        def relationship(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MermaidERParser.RelationshipContext)
            else:
                return self.getTypedRuleContext(MermaidERParser.RelationshipContext,i)


        def invalidLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MermaidERParser.InvalidLineContext)
            else:
                return self.getTypedRuleContext(MermaidERParser.InvalidLineContext,i)


        def getRuleIndex(self):
            return MermaidERParser.RULE_diagram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiagram" ):
                listener.enterDiagram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiagram" ):
                listener.exitDiagram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiagram" ):
                return visitor.visitDiagram(self)
            else:
                return visitor.visitChildren(self)




    def diagram(self):

        localctx = MermaidERParser.DiagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_diagram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(MermaidERParser.ER_DIAGRAM)
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 25072) != 0):
                self.state = 30
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 27
                    self.entityDef()
                    pass

                elif la_ == 2:
                    self.state = 28
                    self.relationship()
                    pass

                elif la_ == 3:
                    self.state = 29
                    self.invalidLine()
                    pass


                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 35
            self.match(MermaidERParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InvalidLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MermaidERParser.IDENTIFIER, 0)

        def ONE_TO_ONE(self):
            return self.getToken(MermaidERParser.ONE_TO_ONE, 0)

        def ONE_TO_MANY(self):
            return self.getToken(MermaidERParser.ONE_TO_MANY, 0)

        def MANY_TO_MANY(self):
            return self.getToken(MermaidERParser.MANY_TO_MANY, 0)

        def MANY_TO_ONE(self):
            return self.getToken(MermaidERParser.MANY_TO_ONE, 0)

        def WS(self):
            return self.getToken(MermaidERParser.WS, 0)

        def NEWLINE(self):
            return self.getToken(MermaidERParser.NEWLINE, 0)

        def COMMENT(self):
            return self.getToken(MermaidERParser.COMMENT, 0)

        def getRuleIndex(self):
            return MermaidERParser.RULE_invalidLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInvalidLine" ):
                listener.enterInvalidLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInvalidLine" ):
                listener.exitInvalidLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvalidLine" ):
                return visitor.visitInvalidLine(self)
            else:
                return visitor.visitChildren(self)




    def invalidLine(self):

        localctx = MermaidERParser.InvalidLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_invalidLine)
        self._la = 0 # Token type
        try:
            self.state = 39
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.match(MermaidERParser.IDENTIFIER)
                pass
            elif token in [4, 5, 6, 7, 8, 14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                _la = self._input.LA(1)
                if _la <= 0 or (((_la) & ~0x3f) == 0 and ((1 << _la) & 245262) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entityName(self):
            return self.getTypedRuleContext(MermaidERParser.EntityNameContext,0)


        def columnDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MermaidERParser.ColumnDefContext)
            else:
                return self.getTypedRuleContext(MermaidERParser.ColumnDefContext,i)


        def getRuleIndex(self):
            return MermaidERParser.RULE_entityDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntityDef" ):
                listener.enterEntityDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntityDef" ):
                listener.exitEntityDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntityDef" ):
                return visitor.visitEntityDef(self)
            else:
                return visitor.visitChildren(self)




    def entityDef(self):

        localctx = MermaidERParser.EntityDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_entityDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.entityName()
            self.state = 42
            self.match(MermaidERParser.T__0)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 43
                self.columnDef()
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self.match(MermaidERParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MermaidERParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MermaidERParser.RULE_entityName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntityName" ):
                listener.enterEntityName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntityName" ):
                listener.exitEntityName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntityName" ):
                return visitor.visitEntityName(self)
            else:
                return visitor.visitChildren(self)




    def entityName(self):

        localctx = MermaidERParser.EntityNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_entityName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(MermaidERParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnType(self):
            return self.getTypedRuleContext(MermaidERParser.ColumnTypeContext,0)


        def columnName(self):
            return self.getTypedRuleContext(MermaidERParser.ColumnNameContext,0)


        def columnModifiers(self):
            return self.getTypedRuleContext(MermaidERParser.ColumnModifiersContext,0)


        def columnComment(self):
            return self.getTypedRuleContext(MermaidERParser.ColumnCommentContext,0)


        def getRuleIndex(self):
            return MermaidERParser.RULE_columnDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnDef" ):
                listener.enterColumnDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnDef" ):
                listener.exitColumnDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnDef" ):
                return visitor.visitColumnDef(self)
            else:
                return visitor.visitChildren(self)




    def columnDef(self):

        localctx = MermaidERParser.ColumnDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_columnDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.columnType()
            self.state = 54
            self.columnName()
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0):
                self.state = 55
                self.columnModifiers()


            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 58
                self.columnComment()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MermaidERParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MermaidERParser.RULE_columnType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnType" ):
                listener.enterColumnType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnType" ):
                listener.exitColumnType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnType" ):
                return visitor.visitColumnType(self)
            else:
                return visitor.visitChildren(self)




    def columnType(self):

        localctx = MermaidERParser.ColumnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_columnType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(MermaidERParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MermaidERParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MermaidERParser.RULE_columnName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnName" ):
                listener.enterColumnName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnName" ):
                listener.exitColumnName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnName" ):
                return visitor.visitColumnName(self)
            else:
                return visitor.visitChildren(self)




    def columnName(self):

        localctx = MermaidERParser.ColumnNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_columnName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(MermaidERParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnModifiersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PK(self):
            return self.getToken(MermaidERParser.PK, 0)

        def FK(self):
            return self.getToken(MermaidERParser.FK, 0)

        def UK(self):
            return self.getToken(MermaidERParser.UK, 0)

        def getRuleIndex(self):
            return MermaidERParser.RULE_columnModifiers

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnModifiers" ):
                listener.enterColumnModifiers(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnModifiers" ):
                listener.exitColumnModifiers(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnModifiers" ):
                return visitor.visitColumnModifiers(self)
            else:
                return visitor.visitChildren(self)




    def columnModifiers(self):

        localctx = MermaidERParser.ColumnModifiersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_columnModifiers)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 65
                self.match(MermaidERParser.PK)
                pass

            elif la_ == 2:
                self.state = 66
                self.match(MermaidERParser.FK)
                pass

            elif la_ == 3:
                self.state = 67
                self.match(MermaidERParser.UK)
                pass

            elif la_ == 4:
                self.state = 68
                self.match(MermaidERParser.PK)
                self.state = 69
                self.match(MermaidERParser.FK)
                pass

            elif la_ == 5:
                self.state = 70
                self.match(MermaidERParser.FK)
                self.state = 71
                self.match(MermaidERParser.PK)
                pass

            elif la_ == 6:
                self.state = 72
                self.match(MermaidERParser.PK)
                self.state = 73
                self.match(MermaidERParser.UK)
                pass

            elif la_ == 7:
                self.state = 74
                self.match(MermaidERParser.UK)
                self.state = 75
                self.match(MermaidERParser.PK)
                pass

            elif la_ == 8:
                self.state = 76
                self.match(MermaidERParser.FK)
                self.state = 77
                self.match(MermaidERParser.UK)
                pass

            elif la_ == 9:
                self.state = 78
                self.match(MermaidERParser.UK)
                self.state = 79
                self.match(MermaidERParser.FK)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnCommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(MermaidERParser.STRING, 0)

        def getRuleIndex(self):
            return MermaidERParser.RULE_columnComment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnComment" ):
                listener.enterColumnComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnComment" ):
                listener.exitColumnComment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnComment" ):
                return visitor.visitColumnComment(self)
            else:
                return visitor.visitChildren(self)




    def columnComment(self):

        localctx = MermaidERParser.ColumnCommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_columnComment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(MermaidERParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationshipContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entityName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MermaidERParser.EntityNameContext)
            else:
                return self.getTypedRuleContext(MermaidERParser.EntityNameContext,i)


        def relationSymbol(self):
            return self.getTypedRuleContext(MermaidERParser.RelationSymbolContext,0)


        def relationshipLabel(self):
            return self.getTypedRuleContext(MermaidERParser.RelationshipLabelContext,0)


        def getRuleIndex(self):
            return MermaidERParser.RULE_relationship

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationship" ):
                listener.enterRelationship(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationship" ):
                listener.exitRelationship(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationship" ):
                return visitor.visitRelationship(self)
            else:
                return visitor.visitChildren(self)




    def relationship(self):

        localctx = MermaidERParser.RelationshipContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_relationship)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.entityName()
            self.state = 85
            self.relationSymbol()
            self.state = 86
            self.entityName()
            self.state = 87
            self.match(MermaidERParser.T__2)
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 88
                self.relationshipLabel()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationSymbolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ONE_TO_ONE(self):
            return self.getToken(MermaidERParser.ONE_TO_ONE, 0)

        def ONE_TO_MANY(self):
            return self.getToken(MermaidERParser.ONE_TO_MANY, 0)

        def MANY_TO_MANY(self):
            return self.getToken(MermaidERParser.MANY_TO_MANY, 0)

        def MANY_TO_ONE(self):
            return self.getToken(MermaidERParser.MANY_TO_ONE, 0)

        def getRuleIndex(self):
            return MermaidERParser.RULE_relationSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationSymbol" ):
                listener.enterRelationSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationSymbol" ):
                listener.exitRelationSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationSymbol" ):
                return visitor.visitRelationSymbol(self)
            else:
                return visitor.visitChildren(self)




    def relationSymbol(self):

        localctx = MermaidERParser.RelationSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_relationSymbol)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7680) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationshipLabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(MermaidERParser.STRING, 0)

        def relationshipLabelText(self):
            return self.getTypedRuleContext(MermaidERParser.RelationshipLabelTextContext,0)


        def getRuleIndex(self):
            return MermaidERParser.RULE_relationshipLabel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationshipLabel" ):
                listener.enterRelationshipLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationshipLabel" ):
                listener.exitRelationshipLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationshipLabel" ):
                return visitor.visitRelationshipLabel(self)
            else:
                return visitor.visitChildren(self)




    def relationshipLabel(self):

        localctx = MermaidERParser.RelationshipLabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_relationshipLabel)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.match(MermaidERParser.STRING)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.relationshipLabelText()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationshipLabelTextContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MermaidERParser.IDENTIFIER)
            else:
                return self.getToken(MermaidERParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return MermaidERParser.RULE_relationshipLabelText

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationshipLabelText" ):
                listener.enterRelationshipLabelText(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationshipLabelText" ):
                listener.exitRelationshipLabelText(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationshipLabelText" ):
                return visitor.visitRelationshipLabelText(self)
            else:
                return visitor.visitChildren(self)




    def relationshipLabelText(self):

        localctx = MermaidERParser.RelationshipLabelTextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_relationshipLabelText)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(MermaidERParser.IDENTIFIER)
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 98
                    self.match(MermaidERParser.T__3)
                    self.state = 99
                    self.match(MermaidERParser.IDENTIFIER) 
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





